=== and the other UPGRADE files for older releases.
===
==============================================================================

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 12 to Asterisk 13 --------------------
------------------------------------------------------------------------------

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 12.2.0 to Asterisk 12.3.0 ------------
------------------------------------------------------------------------------

ARI
------------------
 * A new Playback URI 'tone' has been added. Tones are specified either as
   an indication name (e.g. 'tone:busy') from indications.conf or as a tone
   pattern (e.g. 'tone:240/250,0/250'). Tones differ from normal playback
   URIs in that they must be stopped manually and will continue to occupy
   a channel's ARI control queue until they are stopped. They also can not
   be rewound or fastforwarded.

chan_sip
-----------
 * SIP peers can now specify 'trust_id_outbound' which affects RPID/PAI
   fields for prohibited callingpres information. Values are legacy, no, and
   yes. By default, legacy is used.
   trust_id_outbound=legacy - behavior remains the same as 1.8.26.1. When
     dealing with prohibited callingpres and sendrpid=pai/rpid, RPID/PAI
     headers are appended to outbound SIP messages just as they are with
     allowed callingpres values, but data about the remote party's identity is
     anonymized.
     When sendrpid=rpid, only the remote party's domain is anonymized.
   trust_id_outbound=no - when dealing with prohibited callingpres, RPID/PAI
     headers are not sent.
   trust_id_outbound=yes - RPID/PAI headers are applied with the full remote
     party information in tact even for prohibited callingpres information.
     In the case of PAI, a Privacy: id header will be appended for prohibited